fix the white space

--- a/src/scss/layout/_main1.scss
+++ b/src/scss/layout/_main1.scss
@@ -1,12 +1,12 @@
 .team {
   box-sizing: border-box;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 0px;
-  width: 100%;
-  margin-bottom: 60px;
+  padding: 30px 15px 30px 15px;
+  margin-top: -80px;
   @media all and (min-width: 768px) {
     height: 200px;
   }
@@ -15,16 +15,13 @@
 .EQUIPO {
   box-sizing: border-box;
   text-align: center;
-  width: 100%;
-  height: 45px;
-  margin-left: 15px;
-  margin-right: 15px;
   font-family: $rubikFont;
   font-size: 24px;
   font-weight: 500;
   line-height: 1.88;
-  padding-bottom: 90px;
   color: $textColor;
+  padding-top: 15px;
+  padding-bottom: 15px;
   scroll-margin: 125px;
   @media all and (min-width: 768px) {
     transform: translateY(50%, -50);
@@ -33,16 +30,11 @@
 .lorem {
   box-sizing: border-box;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-family: "Open Sans", sans-serif;
   color: #54585a;
   font-size: 16px;
   line-height: 1.5;
-  height: 200px;
-  width: 50%;
+  max-width: 290px;
   @media all and (min-width: 768px) {
     transform: translateY(-40%);
   }
@@ -56,8 +48,8 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 600px;
-  padding: 30px 15px 45px;
+  padding-top: 30px;
+  padding-bottom: 15px;
   background-color: #f1f1f1;
   color: var(--strengths-descriptions);
   line-height: 24px;
@@ -77,11 +69,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   background-color: #fff;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -30px;
   transform: translate(0, 50%) rotate(45deg);
 }
 
@@ -91,16 +84,15 @@
   font-size: 22px;
   font-weight: 500;
   line-height: 2.05;
-  margin: 20px;
 }
 
 .parrafo {
   box-sizing: border-box;
-  width: 290px;
+  max-width: 290px;
   height: 50%;
   font-family: "Open Sans", sans-serif;
   color: #54585a;
-  padding: 0;
+  padding-bottom: 30px;
   @media all and (min-width: 768px) {
     width: 324px;
   }
